# HolyBot

./: .gitignore  README.md  r
cmake/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
res/: .screenshot.png-006v  .screenshot.png-0P95  .screenshot.png-1T8V  .screenshot.png-1zg1  .screenshot.png-2BPf  .screenshot.png-2m1b  .screenshot.png-3UFV  .screenshot.png-4CWH  .screenshot.png-4JKH  .screenshot.png-4NAD  .screenshot.png-5kk0  .screenshot.png-5qf1  .screenshot.png-6CUN  .screenshot.png-78mX  .screenshot.png-8cXH  .screenshot.png-90cu  .screenshot.png-9PI1  .screenshot.png-9U5O  .screenshot.png-AYwr  .screenshot.png-Cf64  .screenshot.png-EXS6  .screenshot.png-Ebdz  .screenshot.png-GKrN  .screenshot.png-Gmrd  .screenshot.png-HRH1  .screenshot.png-HycQ  .screenshot.png-Khte  .screenshot.png-Kq0w  .screenshot.png-Lnaf  .screenshot.png-MGsP  .screenshot.png-Nd2m  .screenshot.png-NhkK  .screenshot.png-Ob5y  .screenshot.png-Oz5l  .screenshot.png-P7hX  .screenshot.png-QIZC  .screenshot.png-S1yN  .screenshot.png-TQZQ  .screenshot.png-TmKB  .screenshot.png-XAGM  (+41 more)
src/: main.cpp
src/arduino/: arduino.ino
